--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -9,7 +9,7 @@
   price: 131
   price-description: per camera per notte
   saved: 54
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95134/22f40907_88ba_43e3_b730_b922af7b7554.jpg
   link: https://it.secretescapes.com/la-suite-boutique-hotel-procida-campania/sale
   sale-id: 95134
@@ -22,7 +22,7 @@
   price: 105
   price-description: per camera per notte
   saved: 61
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95177/877e6f5b_4f43_4af8_9364_90ed231da2ae.jpg
   link: https://it.secretescapes.com/i-monasteri-golf-and-spa-resort-siracusa-sicilia/sale
   sale-id: 95177
@@ -31,11 +31,11 @@
 - title: Hotel Bad Fallenbach
   id: hotel-bad-fallenbach
   location: San Leonardo in Passiria, Trentino-Alto Adige
-  description: Un 4*S green tra le meraviglie dell’Alto Adige, per un benessere ad alta quota
-  price: 219
+  description: <div>Un 4*S green tra le meraviglie dell’Alto Adige, per un benessere ad alta quota</div><div><br></div>
+  price: 229
   price-description: per camera per notte
   saved: 46
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/72152/9fa3897c_455d_4a72_9296_559c4bda204a.jpg
   link: https://it.secretescapes.com/hotel-bad-fallenbach-san-leonardo-in-passiria-trentino-alto-adige-it123/sale
   sale-id: 94973
@@ -48,8 +48,8 @@
   price: 89
   price-description: per camera per notte
   saved: 40
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/57116/189425a6_932d_4e52_8b0b_a5880b0c8e64.jpg
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/72976/3eb062c8_72e5_4805_b87f_646ca71ce324.jpg
   link: https://it.secretescapes.com/hotel-pulitzer-roma-lazio-italia-roma/sale
   sale-id: 95364
   domestic: true
@@ -61,8 +61,8 @@
   price: 122
   price-description: per camera per notte
   saved: 77
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95083/38a98b94_b9a4_4fe5_aec3_8a3478d7ef10.jpg
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95083/7931e93d_17d9_4dc6_914d_433350ec768b.jpg
   link: https://it.secretescapes.com/le-massif-courmayeur-valle-daosta/sale
   sale-id: 95083
   domestic: true
@@ -74,93 +74,15 @@
   price: 180
   price-description: per camera per notte
   saved: 54
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52996/95761db6_5a85_4a38_a82a_847e0e655eff.jpg
   link: https://it.secretescapes.com/relais-histo-san-pietro-sul-mar-piccolo-taranto-puglia-italia/sale
   sale-id: 94850
   domestic: true
 
-- title: Elizabeth Lifestyle Hotel
-  id: elizabeth-lifestyle-hotel
-  location: Milano, Lombardia
-  description: Un boutique hotel a dieci minuti da Piazza Duomo, a Milano
-  price: 128
-  price-description: per camera per notte
-  saved: 57
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94756/4a76731b_3e89_49ae_b83d_28685a224108.jpg
-  link: https://it.secretescapes.com/elizabeth-lifestyle-hotel-milano-lombardia/sale
-  sale-id: 94756
-  domestic: true
-
-- title: Il Castelfalfi
-  id: il-castelfalfi
-  location: Montaione, Toscana
-  description: Pausa benessere a 5* nel cuore della Toscana
-  price: 208
-  price-description: per camera per notte
-  saved: 37
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/52547/60e3d8f9_bffb_4293_a9de_7095b4dcabba.jpg
-  link: https://it.secretescapes.com/il-castelfalfi-montaione-toscana1/sale
-  sale-id: 94624
-  domestic: true
-
 ################################################################################
 # NON DOMESTIC OFFERS
 ################################################################################
-
-- title: The Ampersand Hotel
-  id: the-ampersand-hotel
-  location: Londra
-  description: City break londinese a 5* in un eccentrico boutique hotel a South Kensington
-  price: 227
-  price-description: per camera per notte
-  saved: 45
-  expires: 2019/06/05
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/94720/18cb899f_9595_4515_825f_7917662480e1.jpg
-  link: https://it.secretescapes.com/the-ampersand-hotel-londra/sale
-  sale-id: 94720
-  domestic: false
-
-- title: GPRO Valparaiso Palace Hotel & Spa
-  id: gpro-valparaiso-palace-hotel-and-spa
-  location: Palma di Maiorca, Isole Baleari
-  description: Esclusivo resort a 5* nel cuore di Palma di Maiorca
-  price: 149
-  price-description: per camera per notte
-  saved: 49
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg
-  link: https://it.secretescapes.com/gpro-valparaiso-palace-hotel-and-spa-palma-di-maiorca-isole-baleari/sale
-  sale-id: 95067
-  domestic: false
-
-- title: Seaside Los Jameos Playa
-  id: seaside-los-jameos-playa
-  location: Lanzarote, Isole Canarie
-  description: Soggiorno in un 4* con spa a due passi dal mare di Lanzarote
-  price: 128
-  price-description: per camera per notte
-  saved: 27
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/83040/b12ed0e9_4ce7_4e15_9e92_4bd626e06714.jpg
-  link: https://it.secretescapes.com/seaside-los-jameos-playa-lanzarote-isole-canarie2/sale
-  sale-id: 94693
-  domestic: false
-
-- title: Gara Suites Golf & Spa
-  id: gara-suites-golf-and-spa
-  location: Tenerife, Canarie
-  description: Soggiorno da sogno in mezza pensione in un incantevole 4* a Tenerife
-  price: 83
-  price-description: per camera per notte
-  saved: 42
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88953/4b3afadd_d23c_4fd8_a220_32caf459a489.jpg
-  link: https://it.secretescapes.com/gara-suites-golf-and-spa-tenerife-canarie/sale
-  sale-id: 94218
-  domestic: false
 
 - title: The Mandrake
   id: the-mandrake
@@ -169,49 +91,10 @@
   price: 249
   price-description: per camera per notte
   saved: 57
-  expires: 2019/06/05
+  expires: 2019/06/13
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/74357/01dc45ca_f10b_4d0f_bacf_1bb0635c2926.jpg
   link: https://it.secretescapes.com/the-mandrake-londra-italia-it/sale
   sale-id: 94946
-  domestic: false
-
-- title: The Gates Hotel Diagonal
-  id: the-gates-hotel-diagonal
-  location: Barcellona, Spagna
-  description: Hotel super chic nel cuore di Barcellona, con vista panoramica sulla città
-  price: 89
-  price-description: per camera per notte
-  saved: 52
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/86981/eee43634_14b3_4e54_8903_49002f727816.jpg
-  link: https://it.secretescapes.com/the-gates-hotel-diagonal-barcellona-spagna/sale
-  sale-id: 94489
-  domestic: false
-
-- title: The Walt Madrid
-  id: the-walt-madrid
-  location: Madrid
-  description: Un 4* di design nel cuore pulsante di Madrid
-  price: 105
-  price-description: per camera per notte
-  saved: 40
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/88549/39983cf1_3d50_42af_812a_89cb00e5fa1a.jpg
-  link: https://it.secretescapes.com/the-walt-madrid-madrid2/sale
-  sale-id: 95133
-  domestic: false
-
-- title: Fergus Club Europa
-  id: fergus-club-europa
-  location: Maiorca
-  description: Vacanza all inclusive in un 4* family-friendly sul mare di Maiorca
-  price: 110
-  price-description: per camera per notte
-  saved: 43
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/73722/2b559a4a_1b35_4bf2_9ffa_1b1590f7d98f.jpg
-  link: https://it.secretescapes.com/fergus-club-europa-maiorca/sale
-  sale-id: 95187
   domestic: false
 
 - title: Finca Serena
@@ -221,23 +104,10 @@
   price: 224
   price-description: per camera per notte
   saved: 41
-  expires: 2019/06/11
+  expires: 2019/06/18
   image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95288/9f34fef9_51da_40c8_aec7_68c510ebe87c.jpg
   link: https://it.secretescapes.com/finca-serena-montuiri-maiorca/sale
   sale-id: 95288
-  domestic: false
-
-- title: Elite Palace Hotel
-  id: elite-palace-hotel
-  location: Stoccolma
-  description: Un 4* d’élite nel cuore di Stoccolma, per un soggiorno di design
-  price: 74
-  price-description: per camera per notte
-  saved: 34
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/91573/ed538f77_0945_46c3_8b03_09d402f28ad8.jpg
-  link: https://it.secretescapes.com/elite-palace-hotel-stoccolma2/sale
-  sale-id: 94907
   domestic: false
 
 - title: Story Hotel Riddargatan
@@ -247,8 +117,98 @@
   price: 103
   price-description: per camera per notte
   saved: 34
-  expires: 2019/06/11
-  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/62203/461d2da7_fec8_4cf0_9b3d_31f16cc3310a.jpg
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/49805/221f07b8_5ea4_4435_b03f_d59967a7445c.jpg
   link: https://it.secretescapes.com/story-hotel-riddargatan-stoccolma-svezia12/sale
   sale-id: 95328
+  domestic: false
+
+- title: Flemings Mayfair
+  id: flemings-mayfair
+  location: Londra
+  description: Un sogno British a 5* nel quartiere chic di Mayfair a Londra
+  price: 258
+  price-description: per camera per notte
+  saved: 41
+  expires: 2019/06/19
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/71164/5afc88d0_452e_41fd_b9ec_92bf119b2e2c.jpg
+  link: https://it.secretescapes.com/flemings-mayfair-londra-italia/sale
+  sale-id: 95940
+  domestic: false
+
+- title: New Road Hotel
+  id: new-road-hotel
+  location: Londra
+  description: Soggiorno hip in un boutique hotel a 4* nel cuore dell’East London
+  price: 101
+  price-description: per camera per notte
+  saved: 36
+  expires: 2019/06/19
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95863/8077a4f0_e9e3_4544_a46c_2baff9ed2cef.jpg
+  link: https://it.secretescapes.com/new-road-hotel-londra/sale
+  sale-id: 95863
+  domestic: false
+
+- title: Hospes Palau de la Mar
+  id: hospes-palau-de-la-mar
+  location: Valencia, Spagna
+  description: Scopri Valencia da un magnifico 5* con spa nel cuore della città
+  price: 143
+  price-description: per camera per notte
+  saved: 35
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/6984/b670907a_c729_4a32_9196_83dd2cf49d48.jpg
+  link: https://it.secretescapes.com/hospes-palau-de-la-mar-valencia-spagna-italia/sale
+  sale-id: 95372
+  domestic: false
+
+- title: Lobby Room Sevilla
+  id: lobby-room-sevilla
+  location: Siviglia, Spagna
+  description: Un boutique hotel di design per un city break a Siviglia
+  price: 120
+  price-description: per camera per notte
+  saved: 31
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/95966/e5d76351_a98e_48c8_bed8_ae756dfcf60c.jpg
+  link: https://it.secretescapes.com/lobby-room-sevilla-siviglia-spagna/sale
+  sale-id: 95966
+  domestic: false
+
+- title: Hotel Jazz Barcelona
+  id: hotel-jazz-barcelona
+  location: Barcellona, Spagna
+  description: City break modern chic nel cuore di Barcellona
+  price: 97
+  price-description: per camera per notte
+  saved: 42
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/81186/0e10b7f2_7420_4eec_abc8_5dce092a078f.jpg
+  link: https://it.secretescapes.com/hotel-jazz-barcelona-barcellona-spagna-it/sale
+  sale-id: 95997
+  domestic: false
+
+- title: Elite Hotel Carolina Tower
+  id: elite-hotel-carolina-tower
+  location: Solna, Stoccolma
+  description: Un hotel dallo stile impeccabile alle porte di Stoccolma
+  price: 75
+  price-description: per camera per notte
+  saved: 41
+  expires: 2019/06/18
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/54642/f37348e1_a0b9_4f55_85b5_e652774c46e7.jpg
+  link: https://it.secretescapes.com/elite-hotel-carolina-tower-solna-stoccolma-ita2/sale
+  sale-id: 95634
+  domestic: false
+
+- title: GPRO Valparaiso Palace Hotel & Spa
+  location: Palma di Maiorca, Isole Baleari
+  description: Esclusivo resort a 5* nel cuore di Palma di Maiorca
+  price: 74
+  price-description: a persona. Basato su 2 persone per camera per notte
+  saved: 49
+  expires: 2019/06/18
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/28477/f79209b7_d7f6_469a_8454_6fb94d56ddae.jpg?auto=format,compress
+  link: https://it.secretescapes.com/gpro-valparaiso-palace-hotel-and-spa-palma-di-maiorca-isole-baleari/sale
+  sale-id: 95067
   domestic: false
